--- a/Poligon intersection [Sweep line]/Poligon intersection [Sweep line].cbp
+++ b/Poligon intersection [Sweep line]/Poligon intersection [Sweep line].cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Platformer" />
+		<Option title="Poligon intersection [Sweep line]" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Platformer" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Poligon intersection [Sweep line]" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -17,7 +17,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Platformer" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Poligon intersection [Sweep line]" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,12 +32,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
-			<Add directory="F:/mingw_dev_lib/i686-w64-mingw32/include/SDL2" />
 		</Compiler>
-		<Linker>
-			<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_ttf" />
-			<Add directory="F:/mingw_dev_lib/i686-w64-mingw32/lib" />
-		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
